--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
     "express": "^4.21.1",
     "fs": "^0.0.1-security",
     "nodemailer": "^6.9.16",
     "path": "^0.12.7",
-    "puppeteer": "^23.6.0",
+    "puppeteer": "^23.6.1",
     "readline": "^1.3.0",
     "swiftapply": "file:"
   }
